--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.0.0
+version: 1.0.1
 history:
+  1.0.1:
+    date: '2022-09-08'
+    title: Versions
+    description: 'Versions update.'
   1.0.0:
     date: '2020-12-11'
     title: 'First version.'
@@ -7,7 +11,7 @@ history:
 plugin:
   -
     name: i18n/translate_v1
-    version: 1.7.0
+    version: 1.9.0
 sys:
   -
     name: mercury
