--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.0.3
+version: 1.0.4
 history:
+  1.0.4:
+    date: '2023-07-28'
+    title: Versions
+    description: 'Versions update.'
   1.0.3:
     date: '2023-05-29'
     title: Versions
@@ -19,7 +23,7 @@ history:
 plugin:
   -
     name: i18n/translate_v1
-    version: 1.11.0
+    version: 1.12.0
 sys:
   -
     name: mercury
