--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.0.4
+version: 1.0.5
 history:
+  1.0.5:
+    date: '2023-09-11'
+    title: Versions
+    description: 'Versions update.'
   1.0.4:
     date: '2023-07-28'
     title: Versions
@@ -23,7 +27,7 @@ history:
 plugin:
   -
     name: i18n/translate_v1
-    version: 1.12.0
+    version: 1.13.1
 sys:
   -
     name: mercury
